--- a/ula.html
+++ b/ula.html
@@ -22,7 +22,7 @@
     <script>
         const questions = [
             {
-                text: "1. Las Subconsultas son: (Seleccione una opción)",
+                text: "Las Subconsultas son: (Seleccione una opción)",
                 options: [
                     { text: "A) Expresiones de agrupamientos en el select", correct: false },
                     { text: "B) Consulta en la lista de campos o en el filtro del select", correct: true },
@@ -32,7 +32,7 @@
                 answer: null
             },
             {
-                text: "2. Las funciones definidas por el usuario: (Seleccione una opción)",
+                text: "Las funciones definidas por el usuario: (Seleccione una opción)",
                 options: [
                     { text: "A) Son las funciones de texto y agregados de SQL Server", correct: false },
                     { text: "B) Reportan siempre suma de registro", correct: false },
@@ -42,7 +42,7 @@
                 answer: null
             },
             {
-                text: "3. Para poder indexar una visita se debe incluir en la definición: (Seleccione una opción)",
+                text: "Para poder indexar una visita se debe incluir en la definición: (Seleccione una opción)",
                 options: [
                     { text: "A) El esquema de la tabla origen únicamente", correct: false },
                     { text: "B) El esquema de la tabla origen y la cláusula SchemaBinding", correct: true },
@@ -52,12 +52,12 @@
                 answer: null
             },
             {
-                text: "4. Para filtrar un campo con función de agregado se usa ………. y para filtrar un campo sin función de agregado se usa …………",
+                text: "Para filtrar un campo con función de agregado se usa ………. y para filtrar un campo sin función de agregado se usa …………",
                 blanks: ["Having", "Where"],
                 answer: [null, null]
             },
             {
-                text: "5. Para el listado de las tablas producto y categorías. cuyo FK es por el campo CategoriaCodigo: (Seleccione una opción)",
+                text: "Para el listado de las tablas producto y categorías. cuyo FK es por el campo CategoriaCodigo: (Seleccione una opción)",
                 options: [
                     { text: "A) Select * from productos As P join Categorias As C on P.CategoryID = C:CategoriaID", correct: false },
                     { text: "B) Select * from productos As P join Categorias As C on P.CategoryCodigo = P.CategoriasCodigo", correct: false },
@@ -67,7 +67,7 @@
                 answer: null
             },
             {
-                text: "6. Son las funciones fijas del servidor y de base de datos cuyos miembros tienen todos los permisos: (Seleccione una opción)",
+                text: "Son las funciones fijas del servidor y de base de datos cuyos miembros tienen todos los permisos: (Seleccione una opción)",
                 options: [
                     { text: "A) Sys_admin y dbowner", correct: false },
                     { text: "B) Sys_admin y db_admin", correct: false },
@@ -77,7 +77,7 @@
                 answer: null
             },
             {
-                text: "7. La siguiente instrucción reporta: Select Upper(SUBSTRING(‘Examen Final Datos 2’, 8,7)): (Seleccione una opción)",
+                text: "La siguiente instrucción reporta: Select Upper(SUBSTRING(‘Examen Final Datos 2’, 8,7)): (Seleccione una opción)",
                 options: [
                     { text: "A) final D", correct: false },
                     { text: "B) error", correct: false },
@@ -87,7 +87,7 @@
                 answer: null
             },
             {
-                text: "8. El siguiente bloque de código: (Seleccione una opción)",
+                text: "El siguiente bloque de código: (Seleccione una opción)",
                 options: [
                     { text: "A) Listar los registros insertados en la variable tipo tabla @Datos", correct: true },
                     { text: "B) Insertar registro en la tabla datos", correct: false },
@@ -97,7 +97,7 @@
                 answer: null
             },
             {
-                text: "9. Para crear un esquema partición y repartir las particiones en los grupos de archivos de la base de datos se usa: (Seleccione una opción)",
+                text: "Para crear un esquema partición y repartir las particiones en los grupos de archivos de la base de datos se usa: (Seleccione una opción)",
                 options: [
                     { text: "A) Create partition schema dbo.GuiasRemisionEsquemaParticion As Partition GuiasRemisionFuncionParticion to ([PRIMARY] , [CONTABILIDAD] , COMERCIAL, PLANIFICACION)", correct: false },
                     { text: "B) Create partition schema GuiasRemisionEsquemaParticion As Partition GuiasRemisionFuncionParticion to ([PRIMARY] , [CONTABILIDAD] , COMERCIAL, PLANIFICACION)", correct: false },
@@ -107,7 +107,7 @@
                 answer: null
             },
             {
-                text: "10. Si la instrucción select de un cursor llamado cursorPrroducyosCompra es: Select P.ProductID, P.ProductName, P.UnitsInStock, P.UnitsOnOrder from dbo.Products As P, cual es la instrucción para leer los registros: (Seleccione una opción)",
+                text: "Si la instrucción select de un cursor llamado cursorPrroducyosCompra es: Select P.ProductID, P.ProductName, P.UnitsInStock, P.UnitsOnOrder from dbo.Products As P, cual es la instrucción para leer los registros: (Seleccione una opción)",
                 options: [
                     { text: "A) Fetch cursorProductosCompra to @Codigo, @Descripcion, @Stock, @EnOrden", correct: false },
                     { text: "B) Fetch cursor cursorProductosCompra into (@Codigo, @Descripcion, @Stock, @EnOrden)", correct: false },
@@ -117,7 +117,7 @@
                 answer: null
             },
             {
-                text: "11. Para crear un inicio de sesión con la cuenta de windows llamada jefe del equipo Londres se utiliza: (Seleccione una opción)",
+                text: "Para crear un inicio de sesión con la cuenta de windows llamada jefe del equipo Londres se utiliza: (Seleccione una opción)",
                 options: [
                     { text: "A) Create login jefe from Windows\\Londres", correct: false },
                     { text: "B) Create login jefe from[Londres\\jefe]", correct: false },
@@ -127,7 +127,7 @@
                 answer: null
             },
             {
-                text: "12. Suponiendo que se tiene la BD abierta, la siguiente instrucción reporta: (Seleccione una opción)",
+                text: "Suponiendo que se tiene la BD abierta, la siguiente instrucción reporta: (Seleccione una opción)",
                 options: [
                     { text: "A) Lista las categorías y la cantidad de productos por cada categoría", correct: false },
                     { text: "B) Lista las categorías y la suma de productos por cada categoría", correct: false },
@@ -137,7 +137,7 @@
                 answer: null
             },
             {
-                text: "13. Respecto al uso de vistas, seleccione la que no es correcta: (Seleccione una opción)",
+                text: "Respecto al uso de vistas, seleccione la que no es correcta: (Seleccione una opción)",
                 options: [
                     { text: "A) Me ocupan espacio en la base de datos", correct: true },
                     { text: "B) Pueden contener información de varias tablas", correct: false },
@@ -147,7 +147,7 @@
                 answer: null
             },
             {
-                text: "14. Para insertar con el asistente de SQL Server información desde una hoja de Excel, seleccione las opciones correctas:",
+                text: "Para insertar con el asistente de SQL Server información desde una hoja de Excel, seleccione las opciones correctas:",
                 options: [
                     { text: "A) Los datos deberían tener sus títulos de campos en una sola fila", correct: true },
                     { text: "B) Pueden importarse hasta 5000 registros", correct: false },
@@ -158,7 +158,7 @@
                 answer: []
             },
             {
-                text: "15. Teniendo el SQLCommand creado en Visual Studio, el método para ejecutar este y el tipo de parámetro que es necesario para capturar el valor de retorno es: (Seleccione una opción)",
+                text: "Teniendo el SQLCommand creado en Visual Studio, el método para ejecutar este y el tipo de parámetro que es necesario para capturar el valor de retorno es: (Seleccione una opción)",
                 options: [
                     { text: "A) ExecuteQuery y ReturnValue", correct: false },
                     { text: "B) ExecuteNonQuery y Return_Value", correct: true },
@@ -168,7 +168,7 @@
                 answer: null
             },
             {
-                text: "16. La herramienta SQL SERVER Profiler: (Seleccione una opción)",
+                text: "La herramienta SQL SERVER Profiler: (Seleccione una opción)",
                 options: [
                     { text: "A) Guarda los eventos seleccionados según la plantilla para utilizarlos en la optimización del motor de base de datos", correct: true },
                     { text: "B) Guardar los registros seleccionados según la plantilla para utilizarlos en la optimización del motor de base de datos", correct: false },
@@ -178,7 +178,7 @@
                 answer: null
             },
             {
-                text: "17. La propiedad para que un formulario sea formulario padre en Visual Studio es IsMdiContainer: (Seleccione una opción)",
+                text: "La propiedad para que un formulario sea formulario padre en Visual Studio es IsMdiContainer: (Seleccione una opción)",
                 options: [
                     { text: "VERDADERO", correct: true },
                     { text: "FALSO", correct: false }
@@ -186,7 +186,7 @@
                 answer: null
             },
             {
-                text: "18. Para definir un parámetro (SQLParameter) en Visual Studio para un campo de tipo nvarchar de tamaño 40, se debe especificar: (Seleccione una opción)",
+                text: "Para definir un parámetro (SQLParameter) en Visual Studio para un campo de tipo nvarchar de tamaño 40, se debe especificar: (Seleccione una opción)",
                 options: [
                     { text: "A) Nombre y Tipo de dato", correct: false },
                     { text: "B) Nombre, Tipo de dato, tamaño, Dirección y Valor", correct: true },
@@ -196,7 +196,7 @@
                 answer: null
             },
             {
-                text: "19. La FDU siguiente: (Seleccione una opción)",
+                text: "La FDU siguiente: (Seleccione una opción)",
                 options: [
                     { text: "A) Suma las unidades en Stock de las categorías", correct: false },
                     { text: "B) Suma las unidades en Stock de los productos de una categoría", correct: true },
@@ -206,7 +206,7 @@
                 answer: null
             },
             {
-                text: "20. Para que un campo en la tabla se compruebe el ingreso de valores definidos y para definir integridad de datos entre las tablas se deben especificar las restricciones siguientes: (Seleccione una opción)",
+                text: "Para que un campo en la tabla se compruebe el ingreso de valores definidos y para definir integridad de datos entre las tablas se deben especificar las restricciones siguientes: (Seleccione una opción)",
                 options: [
                     { text: "A) default y Unique", correct: false },
                     { text: "B) Unique y default", correct: false },
@@ -216,7 +216,7 @@
                 answer: null
             },
             {
-                text: "21. Para definir un SQL Command (Comando) en Visual Studio, se deben definir: (Seleccione una opción)",
+                text: "Para definir un SQL Command (Comando) en Visual Studio, se deben definir: (Seleccione una opción)",
                 options: [
                     { text: "A) Las instrucción select y el dataset", correct: false },
                     { text: "B) el nombre del parámetro, el tipo y la cadena de conexión", correct: false },
@@ -226,7 +226,7 @@
                 answer: null
             },
             {
-                text: "22. Un procedimiento almacenado puede devolver, en un tipo de parámetro de valor retorno: (Seleccione una opción)",
+                text: "Un procedimiento almacenado puede devolver, en un tipo de parámetro de valor retorno: (Seleccione una opción)",
                 options: [
                     { text: "A) todos los campos de un registro", correct: false },
                     { text: "B) resultados que se guardan en un dataset", correct: false },
